--- a/custom_css/static/description/index.html
+++ b/custom_css/static/description/index.html
@@ -1,49 +1,49 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">The real customer centric CRM</h2>
-        <h3 class="oe_slogan">Track leads, close opportunities and get accurate forecasts.</h3>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <img src="crm_sc_00.png">
+        <h2 class="oe_slogan" style="color:#875A7B;">Add custom css to your webiste</h2>
+        <h3 class="oe_slogan">Do not depend on the css from odoo, write your own</h3>
+        <!-- <div class="oe_demo oe_picture oe_screenshot">
+            <img src="crm_sc_00.png"> -->
         </div>
     </div>
 </section>
 
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Get accurate forecasts</h2>
-        <h3 class="oe_slogan">Use actionable data to make better decisions</h3>
+        <h2 class="oe_slogan" style="color:#875A7B;">If you are a designer</h2>
+        <h3 class="oe_slogan">Odoo will not fulfill your needs for designing</h3>
         <div class="oe_span6 text-justify oe_mt32">
             <span class="fa fa-search fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
-            Get the insights you need to make smarter decisions.
+            This is a module for easy use
             </p>
             <span class="fa fa-sliders fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
-            Design custom dashboards to get a picture of your business at a glance.
+            Design custom css to get a better picture of your business on the web.
             </p>
             <span class="fa fa-bar-chart fa-2x pull-left"></span>
             <p>
-            Dig deeper with real-time reports and flow charts that anyone can create and share.
+            Write your css at ::: static/src/css/my_css.css :::
             </p>
         </div>
         <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="crm_preview.gif">
+            <!-- <img class="oe_picture oe_screenshot" src="crm_preview.gif"> -->
         </div>
     </div>
 </section>
 
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Get more done in less time</h2>
+        <h2 class="oe_slogan" style="color:#875A7B;">No setup needed</h2>
         <h3 class="oe_slogan">Great Tool = Happy People</h3>
         <div class="oe_span6">
             <img class="oe_picture oe_screenshot" src="crm_sc_02a.png">
         </div>
         <div class="oe_span6">
             <p class="oe_mt32 oe_mb32 text-justify">
-            Automate activities based on your sales scripts: calls, meetings, mails and quotations. Get all information you need, right on the opportunity: page viewed, mails received, etc.
+            Write css, save the file and refresh the website.
             </p>
-            <img src="crm_sc_02b.png">
+            <!-- <img src="crm_sc_02b.png"> -->
         </div>
     </div>
 </section>
@@ -54,29 +54,16 @@
             <h2 class="oe_slogan" style="color:#875A7B; text-align: left;">Real-time overview</h2>
             <h3 class="oe_slogan" style="text-align: left;">of your performances &amp; next activities</h3>
             <p class="oe_mt32">
-            Know exactly how you perform compared to your monthly targets.<br/>Organize your work based on your scheduled next actions.
+          Never write inline css in odoo website, it makes it too slow.
             </p>
         </div>
-        <div class="oe_span6">
+        <!-- <div class="oe_span6">
             <img class="oe_picture oe_screenshot" src="crm_sc_03.png"/>
-        </div>
+        </div> -->
     </div>
 </section>
 
-<section class="oe_container">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Stay connected to your customers</h2>
-        <h3 class="oe_slogan">Real-time messaging to enhance collaboration</h3>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="crm_sc_04.png"/>
-        </div>
-        <div class="oe_span6">
-            <p class="oe_mt32 text-justify">
-            Get a quick overview of what's going on in your team. See when a colleague logs a call or send a quote. Share ideas and files in real-time and catch-up things you missed when you were away.
-            </p>
-        </div>
-    </div>
-</section>
+
 
 <section class="oe_container oe_separator">
 </section>
